Update preprocessing + graph release
